@@ -1,3 +1,7 @@
+* Added SHOW_ANONYMOUS_ROOM_OCCUPANCY, which can be set to false
+  to hide from the occupancy list rooms occupied by anonymous
+  people.  Default true, which matches the previous behavior.
+
 * For auditing purposes, log all registration actions, including
   creation, update, and deletion in the web server log.  When an admin
   performs the action on behalf of someone else, this is clearly
